Ajout du lien css + header + Css modifié

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="type/css" href:"style.css >
+    <title>Jeu de Nim</title>
 </head>
+<header>
+<div><img src:"" alt:"Accueil" /></div>  <h1>Jeu de Nim</h1>
+<hr />
+</header>
 <body>
+    ## Accueil : Règle + Lancer une partie (avec 1 ou 2 joueurs) 
 </body>
+<footer>
+
+</footer>
 </html>
