maj des conneries de gwen

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="type/css" href:"style.css >
+    <link rel="stylesheet" href="style.css" >
     <title>Jeu de Nim</title>
 </head>
 <header>
-<div><img src:"" alt:"Accueil" /></div>  <h1>Jeu de Nim</h1>
+<div class="header">  
+    <div><img src="" alt="Accueil" /></div>  
+    <h1 >Jeu de Nim</h1>
+</div>
 <hr />
 </header>
 <body>
