rejoter des regles et buttons

--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div>
+        <p>Les Règles du jeu de Nim sont les suivantes :</p>
+        <p>-Il s'agit d'un jeu où deux joueurs s'affrontent en jouant à tour de rôle.</p>
+        <p>-Le plateau est constitué de plusieurs lignes contenant chacunes plusieurs bâtons.</p>
+        <p>-Quand c'est son tour, un joueur choisit une ligne et enlève le nombre de bâton qu'il souhaite (au moins 1 et au maximum le nombre de bâton total présent sur la ligne)</p>
+        <p>-Le joueur qui enlève le dernier bâton du plateau gagne</p>
+    </div>
+
+    <div>
+        <button class="bouton1">1 Joueur</button>
+        <button class="bouton2">2 Joueurs</button> 
+    </div>
+
 </body>
 </html>
