--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="style.css" >
     <title>Jeu de Nim</title>
 </head>
-<header>
-<div class="header">  
-    <div><img src="" alt="Accueil" /></div>  
-    <h1 >Jeu de Nim</h1>
-</div>
-<hr />
-</header>
-<body>
 
+
+<body>
+    <div class="Page">
+    <header>
+        <div class="header">  
+            <div><img src="" alt="Accueil" /></div>  
+            <h1 >Jeu de Nim</h1>
+            <div></div>
+        </div>
+        <hr />
+        </header>
+    <main>
     <div>
         <p>Les Règles du jeu de Nim sont les suivantes :</p>
         <p>-Il s'agit d'un jeu où deux joueurs s'affrontent en jouant à tour de rôle.</p>
@@ -28,10 +32,13 @@
         <button class="bouton1">1 Joueur</button>
         <button class="bouton2">2 Joueurs</button> 
     </div>
-
-    ## Accueil : Règle + Lancer une partie (avec 1 ou 2 joueurs) 
+    </main>
+    <footer>
+        <hr />
+        <div>Credits : MOULIN Romain | SAAD BEN SALLAH Mongi | IMBERGAMO GUASCH Joel | ROBERT Gwenael</div>
+    </footer>
+</div>
 </body>
-<footer>
 
-</footer>
+
 </html>
