Création dossier image + stylisation boutons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>-Le joueur qui enlève le dernier bâton du plateau gagne</p>
     </div>
 
-    <div>
+    <div class="boutons">
         <button class="bouton1">1 Joueur</button>
         <button class="bouton2">2 Joueurs</button> 
     </div>
