Background /disposition du main

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div></div>
         </div>
         <hr />
-        </header>
+    </header>
     <main>
-    <div>
+    <div class="texte">
         <p>Les Règles du jeu de Nim sont les suivantes :</p>
         <p>-Il s'agit d'un jeu où deux joueurs s'affrontent en jouant à tour de rôle.</p>
         <p>-Le plateau est constitué de plusieurs lignes contenant chacunes plusieurs bâtons.</p>
