home + display interface

--- a/interface.html
+++ b/interface.html
@@ -6,38 +6,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Interface-style.css">
-    <title>Document</title>
+    <title>Jeu de Nim</title>
 </head>
 
 
 <body>
-    <section>
-        <H1>Interface</H1>
-    </section>
-    <div id="playingfield">
-        <div class="container" id="line-1">
-            <div class="item"></div>
+    <header>
+        <div class="header">  
+            <div><a href="index.html"><img src="./Assets/Images/home.svg" alt="Home" width="100"/></a></div>  
+            <h1 >Jeu de Nim</h1>
+            <div></div>
         </div>
-        <div class="container">
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
+        <hr />
+    </header>
+    <main>
+        <section>
+            <H1>Interface</H1>
+        </section>
+        <div id="playingfield">
+            <div class="container" id="line-1">
+                <div class="item"></div>
+            </div>
+            <div class="container">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>
+            <div class="container">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>
+            <div class="container">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>    
         </div>
-        <div class="container">
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-        </div>
-        <div class="container">
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-        </div>    
-    </div>
-    
+    </main>
+    <footer>
+        <hr />
+        <div>Credits : MOULIN Romain | SAAD BEN SALLAH Mongi | IMBERGAMO GUASCH Joel | ROBERT Gwenael</div>
+    </footer>
       
 </body>
 <script src="game-rendering.js"></script>
