--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
     <div class="Page">
     <header>
         <div class="header">  
-            <div><img src="" alt="Accueil" /></div>  
+            <div><a href="index.html"><img src="./Assets/Images/home.svg" alt="Home" width="100"/></a></div>  
             <h1 >Jeu de Nim</h1>
             <div></div>
         </div>
         <hr />
-        </header>
+    </header>
     <main>
-    <div>
-        <p>Les Règles du jeu de Nim sont les suivantes :</p>
-        <p>-Il s'agit d'un jeu où deux joueurs s'affrontent en jouant à tour de rôle.</p>
-        <p>-Le plateau est constitué de plusieurs lignes contenant chacunes plusieurs bâtons.</p>
-        <p>-Quand c'est son tour, un joueur choisit une ligne et enlève le nombre de bâton qu'il souhaite (au moins 1 et au maximum le nombre de bâton total présent sur la ligne)</p>
-        <p>-Le joueur qui enlève le dernier bâton du plateau gagne</p>
-    </div>
+        <div>
+            <p>Les Règles du jeu de Nim sont les suivantes :</p>
+            <p>-Il s'agit d'un jeu où deux joueurs s'affrontent en jouant à tour de rôle.</p>
+            <p>-Le plateau est constitué de plusieurs lignes contenant chacunes plusieurs bâtons.</p>
+            <p>-Quand c'est son tour, un joueur choisit une ligne et enlève le nombre de bâton qu'il souhaite (au moins 1 et au maximum le nombre de bâton total présent sur la ligne)</p>
+            <p>-Le joueur qui enlève le dernier bâton du plateau gagne</p>
+        </div>
 
-    <div class="boutons">
-        <button class="bouton1">1 Joueur</button>
-        <button class="bouton2">2 Joueurs</button> 
-    </div>
+        <div class="boutons">
+            <button class="bouton1">1 Joueur</button>
+            <button class="bouton2">2 Joueurs</button> 
+        </div>
     </main>
     <footer>
         <hr />
         <div>Credits : MOULIN Romain | SAAD BEN SALLAH Mongi | IMBERGAMO GUASCH Joel | ROBERT Gwenael</div>
     </footer>
-</div>
+    </div>
 </body>
 
 
