--- a/interface.html
+++ b/interface.html
@@ -16,25 +16,25 @@
     </section>
     <div id="playingfield">
         <div class="container" id="line-1">
-            <div class="item"></div>
+            <div class="item"><img src="./stick.png" width="25rem"></div>
         </div>
         <div class="container">
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
+            <div class="item"><img src="./stick.png" width="25rem"></div>
+            <div class="item"><img src="./stick.png" width="25rem"></div>
+            <div class="item"><img src="./stick.png" width="25rem"></div>
         </div>
         <div class="container">
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
+            <div class="item"><img src="./stick.png"width="25rem"></div>
+            <div class="item"><img src="./stick.png"width="25rem"></div>
+            <div class="item"><img src="./stick.png"width="25rem"></div>
+            <div class="item"><img src="./stick.png"width="25rem"></div>
         </div>
         <div class="container">
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
+            <div class="item"><img src="./stick.png"width="25rem"></div>
+            <div class="item"><img src="./stick.png"width="25rem"></div>
+            <div class="item"><img src="./stick.png"width="25rem"></div>
+            <div class="item"><img src="./stick.png"width="25rem"></div>
+            <div class="item"><img src="./stick.png"width="25rem"></div>
         </div>    
     </div>
     
