--- a/interface.html
+++ b/interface.html
@@ -24,27 +24,27 @@
             <H1>Interface</H1>
         </section>
         <div id="playingfield">
-            <div class="container" id="line-1">
-                <div class="item"></div>
-            </div>
-            <div class="container">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
-            <div class="container">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
-            <div class="container">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>    
+<!--            <div class="container" id="line-1">-->
+<!--                <div class="item"></div>-->
+<!--            </div>-->
+<!--            <div class="container">-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--            </div>-->
+<!--            <div class="container">-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--            </div>-->
+<!--            <div class="container">-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--            </div>    -->
         </div>
     </main>
     <footer>
