--- a/interface.html
+++ b/interface.html
@@ -15,27 +15,27 @@
         <H1>Interface</H1>
     </section>
     <div id="playingfield">
-        <div class="container" id="line-1">
-            <div class="item"><img src="./stick.png" width="25rem"></div>
-        </div>
-        <div class="container">
-            <div class="item"><img src="./stick.png" width="25rem"></div>
-            <div class="item"><img src="./stick.png" width="25rem"></div>
-            <div class="item"><img src="./stick.png" width="25rem"></div>
-        </div>
-        <div class="container">
-            <div class="item"><img src="./stick.png"width="25rem"></div>
-            <div class="item"><img src="./stick.png"width="25rem"></div>
-            <div class="item"><img src="./stick.png"width="25rem"></div>
-            <div class="item"><img src="./stick.png"width="25rem"></div>
-        </div>
-        <div class="container">
-            <div class="item"><img src="./stick.png"width="25rem"></div>
-            <div class="item"><img src="./stick.png"width="25rem"></div>
-            <div class="item"><img src="./stick.png"width="25rem"></div>
-            <div class="item"><img src="./stick.png"width="25rem"></div>
-            <div class="item"><img src="./stick.png"width="25rem"></div>
-        </div>    
+<!--        <div class="container" id="line-1">-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--        </div>-->
+<!--        <div class="container">-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--        </div>-->
+<!--        <div class="container">-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--        </div>-->
+<!--        <div class="container">-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--            <div class="item"><img src="./stick.png"></div>-->
+<!--        </div>    -->
     </div>
     
       
