--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="Page">
     <header>
         <div class="header">  
-            <div><a href="index.html"><img src="./Assets/Images/home.svg" alt="Home" width="100"/></a></div>  
+            <div><a href="index.html"><img src="./Assets/Images/home.png" alt="Home" width="100"/></a></div>  
             <h1 >Jeu de Nim</h1>
             <div></div>
         </div>
