--- a/interface.html
+++ b/interface.html
@@ -54,27 +54,27 @@
         <section class="interface">
             <H2>Interface</H2>
             <div id="playingfield">
-                <div class="container" id="line-1">
-                    <div class="item"></div>
-                </div>
-                <div class="container">
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                </div>
-                <div class="container">
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                </div>
-                <div class="container">
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                    <div class="item"></div>
-                </div>    
+<!--                <div class="container" id="line-1">-->
+<!--                    <div class="item"></div>-->
+<!--                </div>-->
+<!--                <div class="container">-->
+<!--                    <div class="item"></div>-->
+<!--                    <div class="item"></div>-->
+<!--                    <div class="item"></div>-->
+<!--                </div>-->
+<!--                <div class="container">-->
+<!--                    <div class="item"></div>-->
+<!--                    <div class="item"></div>-->
+<!--                    <div class="item"></div>-->
+<!--                    <div class="item"></div>-->
+<!--                </div>-->
+<!--                <div class="container">-->
+<!--                    <div class="item"></div>-->
+<!--                    <div class="item"></div>-->
+<!--                    <div class="item"></div>-->
+<!--                    <div class="item"></div>-->
+<!--                    <div class="item"></div>-->
+<!--                </div>    -->
             </div>
             <button onclick="param()">param</button>
         </section>
