--- a/interface.html
+++ b/interface.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Interface-style.css">
     <script type="type/javascript" src="windowmanager.js">/</script>
     <title>Jeu de Nim</title>
+    <link rel="shortcut icon" href="./Assets/Images/icone.png">
 </head>
 
 
@@ -16,7 +17,7 @@
         <div class="header">  
             <div><a href="index.html"><img src="./Assets/Images/home.png" alt="Home" width="100"/></a></div>  
             <h1 >Jeu de Nim</h1>
-            <div></div>
+            <div class="centrer"></div>
         </div>
     </header>
     <main>
@@ -74,7 +75,6 @@
 <!--                    <div class="item"></div>-->
 <!--                </div>    -->
             </div>
-            <button onclick="param()">param</button>
         </section>
     </main>
     <footer>
