--- a/interface.html
+++ b/interface.html
@@ -37,7 +37,13 @@
             <div class="item"><img src="./stick.png"width="25rem"></div>
         </div>    
     </div>
-    
+    <div class="modal">
+        <p class="message">Joueur 1 a gagné le jeu !</p>
+        <div class="options">
+          <button class="btn">Rejouer</button>
+          <button class="btn">Fin jeu</button>
+        </div>
+      </div>   
       
 </body>
 <script src="game-rendering.js"></script>
