--- a/interface.html
+++ b/interface.html
@@ -40,7 +40,7 @@
                     <div><button type="submit" onclick="game()">Confirmer</button><button type="reset">Reinitialiser</button></div>
                 </form>
                 <div id="array">
-                    <table border="1" id="disparray">
+                    <table id="disparray">
                         <tr>
                                 <th>Line</th>
                                 <th>Column</th>
@@ -75,6 +75,7 @@
 <!--                    <div class="item"></div>-->
 <!--                </div>    -->
             </div>
+            <button onclick="startTurn()">Finish turn</button>
         </section>
     </main>
     <footer>
