deleted border in table

--- a/interface.html
+++ b/interface.html
@@ -39,7 +39,7 @@
                     <div><button type="submit" onclick="play()">Confirmer</button><button type="reset">Reinitialiser</button></div>
                 </div>
                 <div id="array">
-                    <table border="1" id="disparray">
+                    <table id="disparray">
                         <thead>
                             <tr>
                                 <th>Line</th>
