--- a/interface.html
+++ b/interface.html
@@ -36,7 +36,7 @@
                             <option value="impossible">Impossible</option>
                         </select>
                     </div>
-                    <div><button type="submit" onclick="play()">Confirmer</button><button type="reset">Reinitialiser</button></div>
+                    <div><button type="submit" onclick="play()">Confirmer</button><button type="reset" onclick="reset()">Reinitialiser</button></div>
                 </div>
                 <div id="array">
                     <table border="1" id="disparray">
@@ -48,8 +48,6 @@
                         </thead>
                         <tbody id="tablebody">
                             <tr>
-                                <td>n°ligne</td>
-                                <td>n° colonne</td>
                             </tr>
                         </tbody>
                         
