--- a/interface.html
+++ b/interface.html
@@ -27,13 +27,13 @@
                     
 
                     <div><input type="text" id="columnNumber" name="columnNumber" pattern="[0-9]|10" value="5"><button onclick="addRow()">Ajouter une ligne</button></div>
-                    <div>
+                    <div class="Case_Selection">
                         <label for="difficulte">Choisir la difficulté: </label>
                         <select id="difficulte" name="diff">
-                            <option value="facile">Facile</option>
-                            <option value="intermediaire">Inermédiaire</option>
-                            <option value="difficile">Difficile</option>
-                            <option value="impossible">Impossible</option>
+                            <option value="facile" class="Facile">Facile</option>
+                            <option value="intermediaire" class="Intermediaire">Inermédiaire</option>
+                            <option value="difficile" class="Difficile">Difficile</option>
+                            <option value="impossible" class="Impossible">Impossible</option>
                         </select>
                     </div>
                     <div><button type="submit" onclick="play()">Confirmer</button><button type="reset">Reinitialiser</button></div>
@@ -48,8 +48,6 @@
                         </thead>
                         <tbody id="tablebody">
                             <tr>
-                                <td>n°ligne</td>
-                                <td>n° colonne</td>
                             </tr>
                         </tbody>
                         
