petite modif inutile

--- a/interface.html
+++ b/interface.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section class="set">
-            <h2>Paramètres</h2>
+            <H2>Paramètres</H2>
             <div class="form" >
                 <div id="settings">
                     
