Display des interfaces et lien entre les pages

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
         <div class="boutons">
-            <button class="bouton1">1 Joueur</button>
+            <button class="bouton1" onclick="window.location.href='./interface1.html'">1 Joueur</button>
             <button class="bouton2" onclick="window.location.href='./interface.html'">2 Joueurs</button> 
         </div>
     </main>
