--- a/interface_avec_ia.html
+++ b/interface_avec_ia.html
@@ -88,6 +88,8 @@
     </footer>
       
 </body>
+
+<script src="AI.js"></script>
 <script src="game-rendering.js"></script>
 
 <script src="windowmanager.js"></script>
