Fixed problème margin

--- a/interface.html
+++ b/interface.html
@@ -49,27 +49,7 @@
         <section id="interface" class="interface">
             <H2>Interface</H2>
             <div id="playingfield">
-<!--                <div class="container" id="line-1">-->
-<!--                    <div class="item"></div>-->
-<!--                </div>-->
-<!--                <div class="container">-->
-<!--                    <div class="item"></div>-->
-<!--                    <div class="item"></div>-->
-<!--                    <div class="item"></div>-->
-<!--                </div>-->
-<!--                <div class="container">-->
-<!--                    <div class="item"></div>-->
-<!--                    <div class="item"></div>-->
-<!--                    <div class="item"></div>-->
-<!--                    <div class="item"></div>-->
-<!--                </div>-->
-<!--                <div class="container">-->
-<!--                    <div class="item"></div>-->
-<!--                    <div class="item"></div>-->
-<!--                    <div class="item"></div>-->
-<!--                    <div class="item"></div>-->
-<!--                    <div class="item"></div>-->
-<!--                </div>    -->
+                <!--Du code va être rajouté avec JS-->
             </div>
             <button onclick="startTurn()">End Turn (E)</button>
         </section>
