--- a/interface_avec_ia.html
+++ b/interface_avec_ia.html
@@ -72,9 +72,10 @@
                   <button class="btn" onclick="window.location.href='./index.html'">End Game</button>
                 </div>
               </div>
+            </section>
     </main>
     <footer>
-        <div>Credits : MOULIN Romain | SAAD BEN SALLAH Mongi | IMBERGAMO GUASCH Joel | ROBERT Gwenael</div>
+        <div>Credits : MOULIN Romain | SAAD BEN SALAH Mongi | IMBERGAMO GUASCH Joel | ROBERT Gwenael</div>
     </footer>
       
 </body>
