--- a/interface.html
+++ b/interface.html
@@ -12,6 +12,7 @@
 </head>
 
 <body onload="param()">
+    <div id="flash"></div>
     <header>
         <div class="header">  
             <div><a href="index.html"><img src="./Assets/Images/home.png" alt="Home" width="100"/></a></div>  
