--- a/interface_avec_ia.html
+++ b/interface_avec_ia.html
@@ -56,7 +56,10 @@
             </div>
         </section>
         <section id="interface" class="interface">
-            <H2>Interface</H2>
+            <div class="box">
+                <H2>Interface</H2>
+                <div class="cercle"></div>
+            </div>
             <div id="playingfield">
                 <!--Du code va être rajouté avec JS-->
             </div>
