changement de couleurs

--- a/interface_avec_ia.html
+++ b/interface_avec_ia.html
@@ -62,7 +62,7 @@
         <section id="interface" class="interface">
             <div class="box">
                 <H2>Interface</H2>
-                <div class="cercle"></div>
+<!--                <div class="cercle" id="turnIndicator"></div>-->
             </div>
             <div id="playingfield">
                 <!--Du code va être rajouté avec JS-->
