Restriction des batons a 5

--- a/interface.html
+++ b/interface.html
@@ -27,7 +27,7 @@
                 <div id="settings">
                     
                     <!-- doc for the label: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/label-->
-                    <div><label for="columnNumber"></label><input type="text" id="columnNumber" name="columnNumber" pattern="[0-9]|10" value="5"><button onclick="addRow()">Ajouter une ligne</button></div>
+                    <div><label for="columnNumber"></label><input type="text" id="columnNumber" name="columnNumber" pattern="[0-5]" value="5"><button onclick="addRow()">Ajouter une ligne</button></div>
                     <div><button type="submit" onclick="play()">Confirmer</button><button type="reset" onclick="reset()">Reinitialiser</button></div>
                 </div>
                 <div id="array">
