replay works with ai page

--- a/interface_avec_ia.html
+++ b/interface_avec_ia.html
@@ -76,7 +76,7 @@
                 <p class="message" id="endMessage"></p>
                 <div class="options">
                   <button class="btn" onclick="window.location.href='./interface.html'">Replay</button>
-                  <button class="btn" onclick="window.location.href='./index.html'">End Game</button>
+                  <button class="btn" onclick="window.location.href='./interface_avec_ia.html'">End Game</button>
                 </div>
               </div>
             </section>
