--- a/interface_avec_ia.html
+++ b/interface_avec_ia.html
@@ -75,7 +75,7 @@
             <div class="modal">
                 <p class="message" id="endMessage"></p>
                 <div class="options">
-                  <button class="btn" onclick="window.location.href='./interface.html'">Replay</button>
+                  <button class="btn" onclick="window.location.href='./interface_avec_ia.html'">Replay</button>
                   <button class="btn" onclick="window.location.href='./index.html'">End Game</button>
                 </div>
               </div>
