--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </main>
     <footer>
-        <div class="text_footer">Credits : MOULIN Romain | SAAD BEN SALLAH Mongi | IMBERGAMO GUASCH Joel | ROBERT Gwenael</div>
+        <div class="text_footer">Credits : MOULIN Romain | SAAD BEN SALAH Mongi | IMBERGAMO GUASCH Joel | ROBERT Gwenael</div>
     </footer>
     </div>
 </body>
