--- a/interface_avec_ia.html
+++ b/interface_avec_ia.html
@@ -82,7 +82,7 @@
             </section>
     </main>
     <footer>
-        <div>Credits : MOULIN Romain | SAAD BEN SALAH Mongi | IMBERGAMO GUASCH Joel | ROBERT Gwenael</div>
+        <div class="text_footer">Credits : MOULIN Romain | SAAD BEN SALAH Mongi | IMBERGAMO GUASCH Joel | ROBERT Gwenael</div>
     </footer>
     
 </body>
