--- a/interface.html
+++ b/interface.html
@@ -72,7 +72,7 @@
         </section>
     </main>
     <footer>
-        <div>Credits : MOULIN Romain | SAAD BEN SALAH Mongi | IMBERGAMO GUASCH Joel | ROBERT Gwenael</div>
+        <div class="text_footer">Credits : MOULIN Romain | SAAD BEN SALAH Mongi | IMBERGAMO GUASCH Joel | ROBERT Gwenael</div>
     </footer>
       
 </body>
